--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
   riverpod_generator: ^2.2.3
+  go_router: ^9.1.0
 
 dev_dependencies:
   flutter_test:
